--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/prop-types": "^15.7.3",
     "@types/react": "^17.0.0"
   }
 }
