--- a/package.json
+++ b/package.json
@@ -45,11 +45,17 @@
     "@types/axios": "^0.14.0",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^17.0.0",
-    "jest-sonar-reporter": "^2.0.0",
-    "sonarqube-scanner": "^2.8.0",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
-    "react-test-renderer": "^17.0.1"
+    "jest-sonar-reporter": "^2.0.0",
+    "react-test-renderer": "^17.0.1",
+    "sonarqube-scanner": "^2.8.0"
   },
   "jestSonar": {
     "reportPath": "reports",
