--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
     "jest-sonar-reporter": "^2.0.0",
+    "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.1",
     "sonarqube-scanner": "^2.8.0"
   },
