--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "@types/axios": "^0.14.0",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^17.0.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
